feat: big refactor (but needs packages or subpackages) + added Configuration CRD
